[feat_script][all] fix script log output